--- a/bib.bib
+++ b/bib.bib
@@ -24,7 +24,7 @@
 
 @article{shirasawa2017high,
   title={A high-density {SNP} genetic map consisting of a complete set of homologous groups in autohexaploid sweetpotato (\emph{Ipomoea batatas})},
-  author={Shirasawa, Kenta and Tanaka, Masaru and Takahata, Yasuhiro and Ma, Daifu and Cao, Qinghe and Liu, Qingchang and Zhai, Hong and Kwak, Sang-Soo and Jeong, Jae Cheol and Yoon, Ung-Han and others},
+  author={Shirasawa, Kenta and Tanaka, Masaru and Takahata, Yasuhiro and Ma, Daifu and Cao, Qinghe and Liu, Qingchang and Zhai, Hong and Kwak, Sang-Soo and Jeong, Jae Cheol and Yoon, Ung-Han and Lee, Hyeong-Un and Hirakawa, Hideki and Isobe, Sahiko},
   journal={Scientific Reports},
   volume={7},
   year={2017},
