--- a/bib.bib
+++ b/bib.bib
@@ -1,11 +1,10 @@
 @article{gerard2019priors,
-  title={Priors for Genotyping Polyploids},
-  author={Gerard, David and Ferr{\~a}o, Luis Felipe Ventorim},
-  journal={},
-  volume={},
-  number={},
-  pages={},
-  year={2019},
+  title = {Priors for Genotyping Polyploids},
+  year = {2019},
+  journal = {bioRxiv},
+  publisher = {Cold Spring Harbor Laboratory},
+  doi = {10.1101/751784},
+  author = {David Gerard and Lu{\'i}s Felipe Ventorim Ferr{\~a}o},
 }
 
 @article{uitdewilligen2013next,
