--- a/bib.bib
+++ b/bib.bib
@@ -1,10 +1,12 @@
 @article{gerard2019priors,
-  title = {Priors for Genotyping Polyploids},
-  year = {2019},
-  journal = {bioRxiv},
-  publisher = {Cold Spring Harbor Laboratory},
-  doi = {10.1101/751784},
-  author = {David Gerard and Lu{\'i}s Felipe Ventorim Ferr{\~a}o},
+    author = {Gerard, David and Ferr{\~a}o, Lu{\'i}s Felipe Ventorim},
+    title = "{Priors for Genotyping Polyploids}",
+    journal = {Bioinformatics},
+    year = {2019},
+    month = {11},
+    issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btz852},
+    note = {btz852},
 }
 
 @article{uitdewilligen2013next,
